--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -2,7 +2,7 @@
   isPositive(), decrease: isNegative()}" style="width: 100%;">
   <span>
   <div class="mdl-card__title">
-  <h4 style="color: #fff; margin: 0">
+  <h4 style="color: #000000; margin: 0">
   {{stock?.symbol?.toUpperCase()}}<br />
   {{stock?.lastTradePriceOnly | currency:'USD':'symbol':'.2'}}<br />
   {{stock?.change | currency:'USD':'symbol':'.2'}} ({{stock?.
