--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,12 @@
 </div>
 </header>
 <main class="mdl-layout__content" style="padding: 20px;" *ngIf="stocks">
-  <summary [stock]="stocks[0]"></summary>
-  </main>
+
+
+
+  <div *ngFor="let stock of stocks">
+    <summary [stock]="stock"></summary>
+  </div>
+
+</main>
 </div>
